<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

    <name>testWsConsume</name>
	<groupId>org.jboss.ws.plugins.maven.tests</groupId>
	<artifactId>testEndorse</artifactId>
	<packaging>jar</packaging>
	<version>@pom.version@</version>

	<build>
	  <pluginManagement>
		<plugins>
		  <plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>2.0.2</version>
			<configuration>
				<source>1.5</source>
				<target>1.5</target>
				<maxmem>256M</maxmem>
				<fork>${compiler.fork}</fork>
				<compilerArguments>
					<endorseddirs>${basedir}/target/endorsed</endorseddirs>
				</compilerArguments>
			</configuration>
		  </plugin>
		</plugins>
	  </pluginManagement>
	  <plugins>
		<plugin>
          <groupId>org.jboss.ws.plugins</groupId>
          <artifactId>maven-jaxws-tools-plugin</artifactId>
          <version>@pom.version@</version>
          <configuration>
            <target>2.2</target>
            <verbose>true</verbose>
            <fork>true</fork>
            <argLine>-Djava.endorsed.dirs=${basedir}/target/endorsed</argLine>
          </configuration>
          <executions>
            <execution>
              <id>First execution</id>
              <goals>
                <goal>wsconsume</goal>
              </goals>
              <configuration>
                <wsdls>
                  <wsdl>${basedir}/test.wsdl</wsdl>
                </wsdls>
                <targetPackage>foo.bar</targetPackage>
              </configuration>
            </execution>
            <execution>
              <id>Second execution</id>
              <goals>
                <goal>wsconsume-test</goal>
              </goals>
              <configuration>
                <wsdls>
                  <wsdl>${basedir}/test.wsdl</wsdl>
                </wsdls>
                <targetPackage>foo.test.bar</targetPackage>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-dependency-plugin</artifactId>
			<executions>
				<execution>
					<id>create-endorsed-dir</id>
					<phase>validate</phase>
					<goals>
						<goal>copy</goal>
					</goals>
					<configuration>
						<artifactItems>
							<artifactItem>
								<groupId>org.jboss.spec.javax.xml.ws</groupId>
								<artifactId>jboss-jaxws-api_2.2_spec</artifactId>
								<outputDirectory>${basedir}/target/endorsed</outputDirectory>
							</artifactItem>
						</artifactItems>
					</configuration>
				</execution>
			</executions>
		</plugin>
	  </plugins>
	</build>

	<dependencies>
	  <dependency>
		<groupId>org.jboss.ws.native</groupId>
		<artifactId>jbossws-native-client</artifactId>
		<version>3.3.1.GA</version>
	  </dependency>
	  <dependency>
		<groupId>org.jboss.spec.javax.xml.ws</groupId>
		<artifactId>jboss-jaxws-api_2.2_spec</artifactId>
		<version>1.0.0.Beta1</version>
	  </dependency>
	  <dependency>
        <groupId>org.jboss</groupId>
        <artifactId>jbossxb</artifactId>
        <version>2.0.1.GA</version>
      </dependency>
	</dependencies>
</project>
